@@ -144,7 +144,8 @@
     <uncommons:compile module="examples" />
     <uncommons:jar module="examples"
                    jarfile="watchmaker-examples-${version}.jar"
-                   classpath="${artifact.identifier}.jar uncommons-maths-1.2.jar google-collect-1.0-rc1.jar watchmaker-swing-${version}.jar jfreechart-1.0.13.jar jcommon-1.0.16.jar" />
+                   classpath="${artifact.identifier}.jar lib/uncommons-maths-1.2.jar lib/google-collect-1.0-rc1.jar watchmaker-swing-${version}.jar lib/jfreechart-1.0.13.jar lib/jcommon-1.0.16.jar"
+                   mainclass="org.uncommons.watchmaker.examples.Launcher" />
   </target>
 
 
